--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "coolrouter",
-  "version": "1.0.0",
+  "name": "configrouter",
+  "version": "0.0.1",
   "description": "Easily configurable router",
   "main": "index.js",
   "directories": {
@@ -10,7 +10,7 @@
     "route-parser": "^0.0.4"
   },
   "devDependencies": {
-    "chai": "^3.4.1",
+    "expect": "^1.20.2",
     "mocha": "^2.3.4"
   },
   "scripts": {
